2024-08-19T00:58:10Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10445265978 # 392
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-08-19
* notice: last 14d: unq all: 1 7
* notice: prev accum: outdated-unq outdated-all / unq all: 121 327 / 123 337
* notice: next accum: outdated-unq outdated-all / unq all: 122 330 / 123 337
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-08-04] / []

2024-08-13T00:58:26Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10361776959 # 386
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-08-13
* notice: last 14d: unq all: 2 10
* notice: prev accum: outdated-unq outdated-all / unq all: 120 326 / 123 337
* notice: next accum: outdated-unq outdated-all / unq all: 121 327 / 123 337
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-07-29] / []

2024-08-08T00:57:01Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10294057200 # 381
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-08-08
* notice: last 14d: unq all: 3 11
* notice: prev accum: outdated-unq outdated-all / unq all: 120 326 / 122 330
* notice: next accum: outdated-unq outdated-all / unq all: 120 326 / 123 337
* notice: prev exec diff / last date diff / accum: unq all: +1 +7 -0 -0 / +1 +7 -0 -0 / 1 7
* notice: removed / changed dates: [] / [2024-08-07]

2024-08-05T00:58:18Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10240761189 # 378