@@ -1,11 +1,11 @@
 {
-  "count": 7,
-  "uniques": 1,
+  "count": 14,
+  "uniques": 2,
   "views": [
     {
-      "timestamp": "2024-08-07T00:00:00Z",
-      "count": 7,
-      "uniques": 1
+      "timestamp": "2024-09-05T00:00:00Z",
+      "count": 14,
+      "uniques": 2
     }
   ]
 }
